# sqcel

./: Cargo.toml  README  README.md  test.proto
src/: hacks.rs  lib.rs  magic.rs  main.rs  sql_extensions.rs  structure.rs  transpiler.rs  types.rs  variables.rs
src/functions/: cast.rs  count.rs  dyn_fn.rs  iter.rs  json.rs  last.rs  list_oper.rs  map.rs  mod.rs  or.rs  slice.rs  string_operations.rs
src/functions/reduce/: mod.rs
src/transpiler/: alias.rs  mod.rs  views.rs
src/types/: agree.rs  column_types.rs  json.rs  mod.rs  typed_expression.rs
src/types2/: column_types.rs  json.rs  mod.rs  typed_expression.rs
tests/: fuzzing.rs
