[package]
name = "sqcel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
cel-parser = "0.8.0"
clap = { version = "4.5.35", optional = true, features = ["derive"] }
derive_builder = "0.20.2"
protobuf = "3.7.2"
protobuf-parse = "3.7.2"
sea-query = { version = "0.32.3", features = ["postgres-types", "with-json"] }
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.140", optional = true }
thiserror = "2.0.12"

[features]
default = ["serde_json", "cli"]
serde_json = ["dep:serde_json", "dep:serde"]
cli = ["dep:clap"]

[dev-dependencies]
async-once-cell = "0.5.4"
cel-interpreter = { version = "0.9.0", features = ["json"] }
futures = "0.3.31"
indoc = "2.0.6"
serde_postgres = "0.2.0"
tokio = { version = "0.2", features = ["macros"] }
tokio-postgres = "0.5.5"
