[package]
name = "sqcel"
version = "0.1.0"
edition = "2024"

[dependencies]
cel-parser = { version = "0.8.1", default-features = false }
cel-interpreter = { version = "0.9.1", features = [
    "json",
], default-features = false }
clap = { version = "4.5.39", optional = true, features = ["derive"] }
derive_builder = "0.20.2"
protobuf = "3.7.2"
protobuf-parse = "3.7.2"
sea-query = { version = "0.32.6", features = [
    "postgres-array",
    "postgres-types",
    "with-json",
] }
serde_json = { version = "1.0.140", optional = true }
thiserror = "2.0.12"
miette = "7.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"

[features]
default = ["serde_json", "cli", "thread-safe"]
serde_json = ["dep:serde_json"]
cli = ["dep:clap", "miette/fancy"]
fuzzing = []
thread-safe = ["sea-query/thread-safe"]

[dev-dependencies]
anyhow = "1.0.100"
async-once-cell = "0.5.4"
futures = "0.3.31"
indoc = "2.0.6"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.13", features = [
    "array-impls",
    "with-serde_json-1",
] }


[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Nice to allow so we can swap out private data structures more easily
default_trait_access = "allow"
missing_errors_doc = "allow"
option_if_let_else = "allow"
